--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>CSE247-f16-students</name>
+	<name>CSE247-f16-Desu-443845</name>
 	<comment></comment>
 	<projects>
 	</projects>
